--- a/style2.css
+++ b/style2.css
@@ -39,14 +39,14 @@ span{
 
   background-color: dimgray;
 }
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1100px){
   body{
     overflow-x: hidden;
     width: 100%;
   }
   header{
     display: flex;
-
+  align-items:center;
     flex-direction: column;
   }
   .nav-links{
